updated max width of body element to 1440px version v-02

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     background-image: url(./images/pattern-background-desktop.svg);
     background-repeat: no-repeat;
     place-content: center;
+    width: 1440px;
 }
 main {
     max-width:375px;
